--- a/client/src/Styles/animation.css
+++ b/client/src/Styles/animation.css
@@ -71,3 +71,12 @@
     from { width: 100%; }
     to { width: 0%; }
 }
+
+@keyframes loading {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
