--- a/client/src/Styles/navbar.css
+++ b/client/src/Styles/navbar.css
@@ -16,9 +16,29 @@ header ul {
     gap: 4rem;
 }
 
-.navbar-link:hover {
 
+header li{
+    position: relative;
 }
+
+header li::after{
+    content: "";
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    background: rebeccapurple;
+    bottom: -3%;
+    left: 0;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: all 0.3s linear;
+}
+
+header li:hover::after{
+    transform: scaleX(100%);
+}
+
+
 .contact{
     width: 14rem;
     height: 4.3rem;
