--- a/client/src/Styles/global.css
+++ b/client/src/Styles/global.css
@@ -26,6 +26,60 @@ html{
     color: var(--color-gray-blue);
 }
 
+.text-blue-gray{
+    color: #7D8FB3;
+}
+
 .pointer{
     cursor: pointer;
 }
+
+.home{
+    background: #f7f8fa;
+    height: 100vh;
+    width: 100%;
+}
+
+.bar-icon{
+    width: 4rem;
+    height: 4rem;
+    background: white;
+    border-radius: 50%;
+    box-shadow: 0 2px 5px 0 #26334D08;
+}
+
+.task-management{
+    display: grid;
+    grid-template-columns: 80% 20%;
+    align-items: center;
+    justify-content: center;
+}
+.tasks{
+    width: 100%;
+    border-right: 2px solid #EDEFF2;
+    height: 100vh;
+    padding: 2rem;
+}
+
+.all-task{
+    width: 100%;
+    background: white;
+    border-radius: 1rem;
+    height: 100vh;
+}
+.btn-add{
+    width: 12rem;
+    height: 3.4rem;
+    background: #8833FF;
+    border-radius: 25px;
+    box-shadow: 0 10px 30px 0 #8833FF26;
+    color: white;
+}
+.btn-add span{
+    width: 2.5rem;
+    height: 3.4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
