--- a/client/src/Styles/global.css
+++ b/client/src/Styles/global.css
@@ -74,6 +74,7 @@ html{
     border-radius: 25px;
     box-shadow: 0 10px 30px 0 #8833FF26;
     color: white;
+    border: none;
 }
 .btn-add span{
     width: 2.5rem;
@@ -83,3 +84,27 @@ html{
     justify-content: center;
 }
 
+.modal-wrapper{
+    background: #f7f8fa;
+    backdrop-filter: blur(10px);
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+}
+
+.modal-box {
+    width: 27%;
+    height: auto;
+    border-radius: 0.5rem;
+    border: 2px solid rgba(255, 255, 255, 0.15);
+    padding: 2rem;
+    gap: 1rem;
+    background: white;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 1rem 2rem rgba(0,0,0,0.2);
+}
