--- a/client/src/Styles/global.css
+++ b/client/src/Styles/global.css
@@ -57,7 +57,7 @@ html{
 .tasks{
     width: 100%;
     border-right: 2px solid #EDEFF2;
-    height: 100vh;
+    height: auto;
     padding: 2rem;
 }
 
@@ -65,7 +65,7 @@ html{
     width: 100%;
     background: white;
     border-radius: 1rem;
-    height: 100vh;
+    height: auto;
 }
 .btn-add{
     width: 12rem;
