--- a/client/src/Styles/global.css
+++ b/client/src/Styles/global.css
@@ -54,7 +54,6 @@ html {
   display: grid;
   grid-template-columns: 80% 20%;
   justify-content: center;
-
 }
 
 .tasks {
@@ -64,7 +63,7 @@ html {
   overflow-y: scroll;
 }
 
-.tasks::-webkit-scrollbar{
+.tasks::-webkit-scrollbar {
   display: none;
 }
 
@@ -75,7 +74,7 @@ html {
   height: 145vh;
 }
 
-.tasks-inner{
+.tasks-inner {
   background: white;
 }
 
@@ -180,11 +179,12 @@ html {
   animation: spin 1s linear infinite;
 }
 
-.status{
+.status {
   position: relative;
   padding: 0.7rem 1rem;
 }
-.status span{
+
+.status span {
   width: 1.2rem;
   height: 1.2rem;
   display: flex;
@@ -209,12 +209,12 @@ html {
   }
 }
 
-
 @media (width <= 1000px) {
   .task-management {
     grid-template-columns: 70% 30%;
   }
-  .modal-box{
+
+  .modal-box {
     width: 35%;
   }
 }
@@ -230,13 +230,39 @@ html {
     overflow: auto;
   }
 
-  .modal-box{
+  .modal-box {
     width: 55%;
   }
 }
 
-@media (width<=500px) {
-  .modal-box{
+@media (width <= 500px) {
+  .modal-box {
     width: 90%;
+  }
+}
+
+.loader-circle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background: white;
+}
+
+.loader-circle  .circle {
+  width: 20px;
+  height: 20px;
+  background-color: #3498db;
+  border-radius: 50%;
+  margin: 0 5px;
+  animation: scale 1.2s infinite ease-in-out;
+}
+@keyframes scale {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.5);
   }
 }
